@@ -12,6 +12,7 @@ New features:
 - 3462309 Do not allow multiple instances of sfcb
 - 3488688 Don't spawn logger for clients
 - 3493493 Add sfcbsem
+- 3495060 Verify filter and handler information during subscription
 
 Bugs fixed: 
 
